--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   font-family: "Inter", sans-serif;
+}
+
+body {
+  margin: 0;
 }
 
 .light {
@@ -16,15 +17,28 @@
   color: aliceblue;
 }
 
+.container {
+  height: 100vh;
+  width: 100vw;
+}
+
 h1 {
-  padding: 5em 0;
+  margin: 0;
+  padding-top: 2em;
 }
 
 button {
-  border: none;
   border-radius: 5px;
   margin: 2em;
   padding: 2em;
   cursor: pointer;
   font-size: 24px;
+}
+
+.light button {
+  border: 1px solid #16161d;
+}
+
+.dark button {
+  border: 1px solid #fff;
 }
